Header / Paragraph Spacing Issue Fix

--- a/assets/css/2-base/_base.scss
+++ b/assets/css/2-base/_base.scss
@@ -16,7 +16,7 @@ p {
 	color: $textColor;
 
 	&:first-child {
-		@include leader(.5);
+		@include leader(1);
 	}
 }
 
